# ApolloCrossDev

./: .gitignore  ApolloCrossDev.code-workspace  GCC-13.1.sh  GCC-13.2.sh  GCC-13.3.sh  GCC-15.2.sh  GCC-6.50-Base-Linux.sh  GCC-6.50-Base-MacOS.sh  GCC-6.50-Dev-Linux.sh  GCC-6.50-Dev-MacOS.sh  GCC-6.50-Dev.sh  GCC-6.50-Latest-TM.sh  GCC-6.50-Latest.sh  GCC-6.50-MacOS.sh  GCC-6.50-Patched-Linux.sh  GCC-6.50-Patched-MacOS.sh  GCC-6.50-Patched.sh  GCC-6.50-Stable-Linux.sh  GCC-6.50-Stable-MacOS.sh  GCC-6.50-Stable.sh  GCC-6.50.sh  GCC-6.50B.sh  GCC-Install-Base-Linux.sh  GCC-Install-Base-MacOS.sh  GCC-Install-Dev-Linux.sh  GCC-Install-MacOS.sh  GCC-Install-Patched-MacOS.sh  GCC-Install-Patched.sh  GCC-Install-Stable-Linux.sh  GCC-Install-Stable-MacOS.sh  GCC-Install.sh  README.md  acp  log-650.txt  log-err-650.txt
Amiga-GCC/: .gitignore  AMIGA-GCC.sh
Compilers/: .gitignore  ApolloCrossDev.code-workspace  GCC-13.1.sh  GCC-6.50-Stable.sh  GCC-6.50.sh
Compilers/_sources/newlib-cygwin/newlib/libc/sys/amigaos/: Makefile.am  Makefile.in  __cmpxf2.c  __dosbase.c  __mathieeedoubbas.c  __nocommandline.c  __unorddf2.c  configure  configure.in  crt0.c  dummy.c  malloc.cpp  open.c
Compilers/_sources/newlib-cygwin/newlib/libc/sys/amigaos/include/: time.h
Compilers/_sources/newlib-cygwin/newlib/libc/sys/amigaos/include/machine/: setjmp.h
Compilers/_sources/newlib-cygwin/newlib/libc/sys/amigaos/include/rpc/: xdr.h
Compilers/_sources/newlib-cygwin/newlib/libc/sys/amigaos/include/sys/: types.h
Docs/: FD2Pragma.txt
GCC-12.2/: GCC-12.2.sh  GNU-GCC.sh
GCC-2.95/: GCC-2.95.sh  (+3 more)
(+1296 files in other folders)
